--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <script type="text/javascript">
-        (function(h,o,t,j,a,r){
-            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-          h._hjSettings={hjid:1172097,hjsv:6};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+       
 
     // (function(e, t) {
     // 	var n = e.amplitude || { _q: [], _iq: {} };
@@ -133,6 +126,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script>
+      if(!document.location.href.includes('localhost')) {
+         (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 1172097, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+          })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+        }
+    </script>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
