--- a/public/index.html
+++ b/public/index.html
@@ -128,15 +128,15 @@
     -->
     <script>
       if(!document.location.href.includes('localhost')) {
-         (function (h, o, t, j, a, r) {
-            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-            h._hjSettings = { hjid: 1172097, hjsv: 6 };
-            a = o.getElementsByTagName('head')[0];
-            r = o.createElement('script'); r.async = 1;
-            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            (function(h,o,t,j,a,r){
+              h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings={hjid:1172097,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
-          })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
-        }
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      }
     </script>
   </head>
   <body>
