--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,11 @@
     // window.amplitude = amplitude;
   </script>
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122163080-1"></script>
+
+
     <meta charset="utf-8" />
     <title>Burn Cartel</title>
     <meta
@@ -136,6 +141,14 @@
           r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
           a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+
+        // Google analytics stuff
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-122163080-1');
       }
     </script>
   </head>
