--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <title>Burn Cartel</title>
-    <meta
-      name="keywords"
-      content="music, electronic, weekly, mixes, playlists, soulection, soundcloud, new music, spotify"
-    />
-    <meta
-      name="description"
-      description="Weekly new music playlists, emailed straight to you."
-    />
+    <meta id="og-title" property="og:title" content="Burn Cartel">
+
 
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            property="og:keywords"
+            name="keywords"
+            content="music, electronic, weekly, mixes, playlists, soulection, soundcloud, new music, spotify"
+    >
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <!--<meta property="og:url"                content="https://burncartel.com" />-->
+    <meta property="og:type"               content="article" />
+    <meta id="og-description" property="og:description" content="Weekly new music playlists, emailed straight to you." />
+    <meta property="og:image" content="https://res.cloudinary.com/burncartel/image/upload/v1561018369/bc_soundcloud_banner_4.jpg" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -34,7 +37,7 @@
     -->
     <script>
       if (document.location.href.includes('burncartel')) {
-        // HOTJAR TIME      
+        // HOTJAR TIME
         (function(h,o,t,j,a,r){
               h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
             h._hjSettings={hjid:1172097,hjsv:6};
